--- a/values-filebeat.yaml
+++ b/values-filebeat.yaml
@@ -12,20 +12,38 @@ daemonset:
   filebeatConfig:
     filebeat.yml: |
       filebeat:
-        inputs:
-        - type: log
-          enabled: true
-          paths:
-            - /var/log/kubernetes/kube-apiserver-audit.log
-          tags: ["audit", "k8s", "security"]
+        autodiscover:
+          providers:
+            - type: kubernetes
+              # TODO : see if "hints" can be interesting to avoid maintaining a complex configuration here
+              # This would allow to configure filebeat at k8s namespace level or pod level with annotations
+              # https://www.elastic.co/guide/en/beats/filebeat/current/configuration-autodiscover-hints.html
+              # hints.enabled: true
+              templates:
+                ## TRAEFIK
+                - condition:
+                    and:
+                      - has_fields: ['kubernetes.container.id']
+                      - contains:
+                          kubernetes.namespace: traefik
+                  config:
+                    - module: traefik
+                      access:
+                        input: 
+                          type: container
+                          paths:
+                            - /var/lib/docker/containers/${data.kubernetes.container.id}/*.log
+                          exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+                          processors:
+                            - add_fields:
+                                target: project
+                                fields:
+                                  name: apigw
+                                  application: traefik
+
       processors:
       - add_host_metadata:
-      - decode_json_fields:
-          fields: ["message"]
-          process_array: false
-          max_depth: 1
-          target: "audit"
-          overwrite_keys: false
-          add_error_key: true
+      - add_kubernetes_metadata:
+          host: kind-control-plane
       output.elasticsearch:
         hosts: ["http://elasticsearch-master:9200"]
