--- a/values-filebeat.yaml
+++ b/values-filebeat.yaml
@@ -15,35 +15,51 @@ daemonset:
         autodiscover:
           providers:
             - type: kubernetes
+              templates:
+                - condition:
+                    equals:
+                      kubernetes.namespace: traefik
+                  config:
+                    - type: container
+                      paths:
+                        - /var/log/containers/*-${data.kubernetes.container.id}.log
+                      exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+
+
               # TODO : see if "hints" can be interesting to avoid maintaining a complex configuration here
               # This would allow to configure filebeat at k8s namespace level or pod level with annotations
               # https://www.elastic.co/guide/en/beats/filebeat/current/configuration-autodiscover-hints.html
               # hints.enabled: true
-              templates:
-                ## TRAEFIK
-                - condition:
-                    and:
-                      - has_fields: ['kubernetes.container.id']
-                      - contains:
-                          kubernetes.namespace: traefik
-                  config:
-                    - module: traefik
-                      access:
-                        input: 
-                          type: container
-                          paths:
-                            - /var/lib/docker/containers/${data.kubernetes.container.id}/*.log
-                          exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
-                          processors:
-                            - add_fields:
-                                target: project
-                                fields:
-                                  name: apigw
-                                  application: traefik
+              # templates:
+              #   ## TRAEFIK
+              #   - condition:
+              #       and:
+              #         - has_fields: ['kubernetes.container.id']
+              #         - contains:
+              #             kubernetes.namespace: traefik
+              #     config:
+              #       - module: traefik
+              #         access:
+              #           input: 
+              #             type: container
+              #             paths:
+              #               - /var/lib/docker/containers/${data.kubernetes.container.id}/*.log
+              #             exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+              #             processors:
+              #               - add_fields:
+              #                   target: project
+              #                   fields:
+              #                     name: apigw
+              #                     application: traefik
 
       processors:
       - add_host_metadata:
       - add_kubernetes_metadata:
-          host: kind-control-plane
-      output.elasticsearch:
-        hosts: ["http://elasticsearch-master:9200"]
+          host: ${NODE_NAME}
+      # - drop_event:
+      #     when:
+      #     - equals:
+      #         kubernetes.container.name: filebeat
+      
+      output.logstash:
+        hosts: ["logstash-logstash:5044"]
