--- a/values-logstash-beat.yaml
+++ b/values-logstash-beat.yaml
@@ -14,6 +14,10 @@ logstashPipeline:
       }
     }
     output {
+      elasticsearch {
+        hosts => ["http://elasticsearch-master:9200"]
+        index => "logstash"
+      }
       stdout {}
     }
 
