--- a/values-logstash.yaml
+++ b/values-logstash.yaml
@@ -13,4 +13,5 @@ logstashPipeline:
         hosts => ["http://elasticsearch-master:9200"]
         index => "logstash"
       }
+      stdout {}
     }
