--- a/values-filebeat.yaml
+++ b/values-filebeat.yaml
@@ -1,5 +1,6 @@
 ---
 daemonset:
+  enabled: true
   extraVolumes:
   - hostPath:
       path: /var/log/kubernetes
@@ -11,7 +12,11 @@ daemonset:
     readOnly: true
   filebeatConfig:
     filebeat.yml: |
+      logging.metrics.enabled: false
       filebeat:
+        config.modules:
+          enabled: true
+          path: ${path.config}/modules.d/*.yml
         autodiscover:
           providers:
             - type: kubernetes
@@ -30,36 +35,35 @@ daemonset:
               # This would allow to configure filebeat at k8s namespace level or pod level with annotations
               # https://www.elastic.co/guide/en/beats/filebeat/current/configuration-autodiscover-hints.html
               # hints.enabled: true
-              # templates:
-              #   ## TRAEFIK
-              #   - condition:
-              #       and:
-              #         - has_fields: ['kubernetes.container.id']
-              #         - contains:
-              #             kubernetes.namespace: traefik
-              #     config:
-              #       - module: traefik
-              #         access:
-              #           input: 
-              #             type: container
-              #             paths:
-              #               - /var/lib/docker/containers/${data.kubernetes.container.id}/*.log
-              #             exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
-              #             processors:
-              #               - add_fields:
-              #                   target: project
-              #                   fields:
-              #                     name: apigw
-              #                     application: traefik
+
+                ## ------------------ TRAEFIK module
+                - condition:
+                    and:
+                      - has_fields: ['kubernetes.container.id']
+                      - contains:
+                          kubernetes.namespace: traefik
+                  config:
+                    - module: traefik
+                      access:
+                        input: 
+                          type: container
+                          paths:
+                            - /var/lib/docker/containers/${data.kubernetes.container.id}/*.log
+                          exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+                          processors:
+                            - add_fields:
+                                target: project
+                                fields:
+                                  name: apigw
+                                  application: traefik
 
       processors:
       - add_host_metadata:
       - add_kubernetes_metadata:
           host: ${NODE_NAME}
-      # - drop_event:
-      #     when:
-      #     - equals:
-      #         kubernetes.container.name: filebeat
-      
+      - drop_event:
+          when.equals:
+            kubernetes.container.name: "filebeat"
+
       output.logstash:
         hosts: ["logstash-logstash:5044"]
