--- a/values-logstash-debug.yaml
+++ b/values-logstash-debug.yaml
@@ -60,6 +60,7 @@ logstashPipeline:
 
 
     output {
+      stdout {}
       elasticsearch {
         hosts => ["http://elasticsearch-master:9200"]
         index => "logstash-debug"
